Set overflow to 'hidden' on panes. I'm pretty sure this fixes #1594.

--- a/static/panes.less
+++ b/static/panes.less
@@ -24,6 +24,7 @@
     display: -webkit-flex;
     -webkit-flex: 1;
     -webkit-flex-direction: column;
+    overflow: hidden;
 
     .item-views {
       -webkit-flex: 1;
